IMPALA-4554: fix projection of nested collections with mt_dop > 0

Change-Id: I42e72eae8dfa78f7d53708eb8f2f0da8b780692d
Reviewed-on: http://gerrit.cloudera.org:8080/5270
Tested-by: Internal Jenkins
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>